test-aws/aws_configs/eu-north-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-bd68bfd4",
     "NetworkAclId": "acl-eafe0883",
     "SubnetId": "subnet-db556491"
    },
    {
     "NetworkAclAssociationId": "aclassoc-bf68bfd6",
     "NetworkAclId": "acl-eafe0883",
     "SubnetId": "subnet-28dbcc50"
    },
    {
     "NetworkAclAssociationId": "aclassoc-bc68bfd5",
     "NetworkAclId": "acl-eafe0883",
     "SubnetId": "subnet-f0e71399"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-eafe0883",
   "OwnerId": "118292266645",
   "Tags": [],
   "VpcId": "vpc-2f29de46"
  }
 ]
}
